improve methods in service